<resources>
    <string name="app_name">iBus</string>
    <string name="ibus">iBus</string>
    <string name="login">User</string>
    <string name="password">Password</string>
    <string name="reset_your_password">Reset your password!</string>
    <string name="don_t_have_an_account_create_one_now">Don\'t have an account? Create one now!</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="title_activity_main_app">mainApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_jta_stations">jtaStations</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_tickets">Buy tickets</string>
    <string name="map">Map info</string>
    <string name="tickets_qr">Tickets QR</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum_n">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n</string>
    <string name="ibus_login">iBus - Login</string>
    <string name="ibus_register">iBus - Register</string>
    <string name="password_confirmation">Password Confirmation</string>
</resources>