<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_ticket"
            android:title="@string/tickets_qr" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_scanner"
            android:title="@string/buy_tickets" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/faq">
        </item>
    </group>

</menu>