<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/ibus_register"
        android:layout_gravity="center"
        android:textSize="36sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:layout_marginTop="64dp"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="#000"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmationRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirmation"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>




</LinearLayout>